# StripePy

./: .codespellrc  .dockerignore  .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  Dockerfile  LICENCE  README.md  main.py  main_over_MoDLE.py  pyproject.toml  requirements.txt
.github/: .codecov.yml  dependabot.yml
.github/workflows/: build-dockerfile.yml  build-package.yml  cache-test-datasets.yml  ci.yml  lint-cff.yml
benchmark/: run-over-StripeBench.py
docs/: Makefile  README.md  api.rst  cli_reference.rst  conf.py  detect_stripes.rst  downloading_sample_datasets.rst  fetch_stripes.rst  generate_cli_reference.py  generate_plots.rst  index.rst  installation.rst  patch_docs_for_rtd.py  quickstart.rst  requirements.txt  telemetry.rst  visualize_stripes.rst  visualize_stripes_higlass.rst
docs/_ext/: styles.py
docs/assets/: telemetry_table.tsv
src/stripepy/: IO.py  __init__.py  cli.py  configs.py  main.py  main_over_MoDLE.py  others.py  plot.py  run-over-StripeBench.py  run.py  stripepy.py  utils.py
src/stripepy/algorithm/: finders.py  step1.py  step2.py  step3.py  step4.py  step5.py
src/stripepy/algorithms/: finders.py  step1.py  step2.py  step3.py  step4.py  step5.py
src/stripepy/cli/: call.py  download.py  logging.py  plot.py  setup.py  telemetry.py  view.py
src/stripepy/data_structures/: __init__.py  concurrent.py  persistence1d.py  result.py  result_file.py  shared_sparse_matrix.py  stripe.py  unionfind.py
src/stripepy/io/: __init__.py  common.py  logging.py  progress_bar.py  result_file.py
src/stripepy/utils/: IO.py  TDA.py  __init__.py  common.py  evaluate.py  finders.py  multiprocess_sparse_matrix.py  others.py  persistence1d.py  postprocessing.py  progress_bar.py  regressions.py  shared_sparse_matrix.py  stripe.py  stripepy.py  unionfind.py
test/: README.md  test_IO.py  test_cli.py  test_others.py  test_stripepy.py
test/integration/: __init__.py  common.py  test_stripepy_call.py  test_stripepy_cli.py  test_stripepy_download.py  test_stripepy_plot.py  test_stripepy_view.py  test_stripepy_view.py.disabled
test/scripts/: compare_result_files.py  generate_reference_tables.sh  generate_test_figures.sh  generate_test_matrix.py  result_file_to_parquet.py
test/unit/: __init__.py  conftest.py  test_IO.py  test_others.py  test_result.py  test_result_file.py  test_stripe.py  test_stripepy.py  test_utils.py
test/unit/common/: cool.py
test/unit/test_algorithms/: test_step1.py
test/unit/test_data_structures/: test_result.py  test_result_file.py  test_stripe.py
test/unit/test_helpers/: test_helpers_cool.py  test_helpers_data.py
test/unit/test_io/: test_common.py
utils/: IO.py  TDA.py  cli.py  configs.py  evaluate.py  finders.py  others.py  persistence1d.py  postprocessing.py  regressions.py  stripe.py  stripepy.py  unionfind.py  visualize_stripes_with_highlass.ipynb
utils/devel/: build_dockerfile.sh  test_docker_image.sh
