# Copyright (C) 2024 Roberto Rossini <roberros@uio.no>
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]

build-backend = "hatchling.build"

[project]
name = "stripepy-hic"
description = "StripePy recognizes architectural stripes in 3C and Hi-C contact maps using geometric reasoning"
dynamic = ["version"]
authors = [
    {name="Andrea Raffo", email="andrea.raffo@ibv.uio.no"},
    {name="Bendik Berg", email="bendber@ifi.uio.no"},
    {name="Roberto Rossini", email="roberros@uio.no"},
]

maintainers = [
  {name="Andrea Raffo", email="andrea.raffo@ibv.uio.no"},
  {name="Roberto Rossini", email="roberros@uio.no"},
]

readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

keywords = [
    "hi-c",
    "hic",
    "stripe",
    "stripes",
    "architectural stripe",
    "contact map",
    "cooler",
    "stripe recognition",
]

requires-python = ">=3.9"
dependencies = [
    "h5py >3, <4",
    "hictkpy[scipy] >=1, <2",
    "matplotlib >=3.8, <4",
    "numpy >=2, <3",
    "pandas >=2.0, <3",
    "scikit-learn >=1.5, <2",
    "scipy >=1.10, <2",
    "seaborn >=0.13, <1"
]

[project.optional-dependencies]

test = [
    "pytest",
    "pytest-cov",
    "stripepy-hic",
]

dev = [
    "stripepy-hic[test]",
    "black[jupyter]",
    "build",
    "isort",
    "pre-commit",
]

[project.scripts]
stripepy = "stripepy:main"

[project.urls]
Homepage = "https://github.com/paulsengroup/StripePy"
Issues = "https://github.com/paulsengroup/StripePy/issues"
Repository = "https://github.com/paulsengroup/StripePy.git"
Source = "https://github.com/paulsengroup/StripePy"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
markers = ["end2end", "unit"]
python_files = [
  "test/unit/test*.py",
  "test/integration/test*.py",
]
testpaths = [
  "test/"
]


[tool.hatch.version]
source = "vcs"
fallback-version = "unknown"

[tool.hatch.build.targets.wheel]
packages = ["src/stripepy"]

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13"]
